# Discord-BE

./: .env  .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: duty.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
migration/: Cargo.toml  README.md
migration/src/: m20220101_000001_create_table.rs
src/: cors.rs  error.rs  lib.rs  login.sql  main.rs  module.rs
src/Auth/: auth.controller.rs  auth.module.rs
src/login/: controller.rs  mod.rs
src/share/: jwt.rs  middleware.rs  mod.rs
src/v1/: mod.rs
src/v1/login/: dto.rs  handle.rs  mod.rs
src/v1/register/: dto.rs  handle.rs  mod.rs
