[package]
name = "Discord-BE"
version = "0.1.0"
authors = ["zhangyuxuan  <zhangyuxuan01@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4" }
deadpool = {version = "0.9.5"}
jsonwebtoken = {version = " 8"}
serde = {version = "1.0", features = ["derive"] }
tokio-postgres = {version = '0.7.6'}
tokio-pg-mappe = {version = '0.2.0'}
tokio-pg-mapper-derive = {version = '0.2.0'}
tower-http = { version = "0.3.0", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }