[package]
name = "Discord-BE"
version = "0.1.0"
authors = ["zhangyuxuan  <zhangyuxuan01@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4" }
jsonwebtoken = {version = " 8"}
sea-orm={ version="0.8", features=["runtime-tokio-native-tls", "sqlx-postgres", "debug-print"] }
serde = {version = "1.0", features = ["derive"] }
tower-http = { version = "0.3.0", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }