[package]
name = "discord-be"
version = "0.1.0"
authors = ["zhangyuxuan  <zhangyuxuan01@gmail.com>"]
edition = "2021"

[dependencies]
# 本地库
entity = { path = "entity" }
migration = { path= "migration" }

# 外部库
axum = { version = "0.4", features=["headers","http2","json", "tower-log", "ws"] }
jsonwebtoken = {version = " 8"}
sea-orm={ version="^0.8", features=["runtime-tokio-native-tls", "sqlx-postgres", "debug-print"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.3.0", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"